2015-03-03  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/generator.el: Make globals conform to elisp
	style throughout.  Use more efficient font-lock patterns.
	(cps-inhibit-atomic-optimization): Rename from
	`cps-disable-atomic-optimization'.
	(cps--gensym): New macro; replaces `cl-gensym' throughout.
	(cps-generate-evaluator): Move the `iter-yield' local macro
	definition here
	(iter-defun, iter-lambda): from here.

2015-03-03  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package-autoremove): Fix if logic.

2015-03-03  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--dump-frame): For pixel height return total
	number of frame's lines.

2015-03-03  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/cl-macs.el (cl-iter-defun): Add cl-iter-defun.

	* emacs-lisp/generator.el (iter-defun): Correctly propagate
	docstrings and declarations to underlying function.

2015-03-02  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/generator.el: New file.

	* vc/vc.el (vc-responsible-backend): Add autoload cookie for
	`vc-responsible-backend'.

2015-03-01  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hooks.el (vc-state, vc-working-revision):
	Use `vc-responsible-backend' in order to support unregistered files.

	* vc/vc-rcs.el (vc-rcs-unregister): Support unregistered files.

	* vc/vc-rcs.el (vc-rcs-fetch-master-state):
	* vc/vc-sccs.el (vc-sccs-working-revision): Handle undefined
	master name.

	* vc/vc-src.el (vc-src-working-revision): Do not return an empty string.

2015-03-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-insert): Remove soft hyphens.
	(shr-insert): Also remove soft hypens from non-folded text.

2015-02-28  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailmm.el (rmail-mime-insert-html): Decode HTML payload
	when the charset is only given by the HTML <head>, and allow to
	specify the encoding with "C-x RET c".

2015-02-27  Mark Laws  <mdl@60hz.org>
